; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/fs/cifs/extr_misc.c_cifs_small_buf_release.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/fs/cifs/extr_misc.c_cifs_small_buf_release.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [45 x i8] c"Null buffer passed to cifs_small_buf_release\00", align 1
@cifs_sm_req_poolp = common dso_local global i32 0, align 4
@smBufAllocCount = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @cifs_small_buf_release(i8* %0) #0 {
  %2 = alloca i8*, align 8
  store i8* %0, i8** %2, align 8
  %3 = load i8*, i8** %2, align 8
  %4 = icmp eq i8* %3, null
  br i1 %4, label %5, label %7

5:                                                ; preds = %1
  %6 = call i32 @cFYI(i32 1, i8* getelementptr inbounds ([45 x i8], [45 x i8]* @.str, i64 0, i64 0))
  br label %12

7:                                                ; preds = %1
  %8 = load i8*, i8** %2, align 8
  %9 = load i32, i32* @cifs_sm_req_poolp, align 4
  %10 = call i32 @mempool_free(i8* %8, i32 %9)
  %11 = call i32 @atomic_dec(i32* @smBufAllocCount)
  br label %12

12:                                               ; preds = %7, %5
  ret void
}

declare dso_local i32 @cFYI(i32, i8*) #1

declare dso_local i32 @mempool_free(i8*, i32) #1

declare dso_local i32 @atomic_dec(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
